src/objects/User_Examination__c.object
<CustomObject>
    <description>Stores exams a particular user has taken. It also tracks questions not yet answered by a user (if an exam is not completed).</description>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date when the exam was created for a specific user</description>
        <label>Date_Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earned_Badge__c</fullName>
        <description>Used to compare user&apos;s score with achievement rate.</description>
        <formula>IF((( Score__c / Perfect_Score__c ) &gt;  Examination_ID__r.Achievement_Rate__c) ,&apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earned_Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Examination_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Examination</label>
        <referenceTo>Examination__c</referenceTo>
        <relationshipLabel>User Examinations</relationshipLabel>
        <relationshipName>User_Examinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Perfect_Score__c</fullName>
        <label>Perfect_Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_ID__c</fullName>
        <description>Stores question_ids not yet answered by the user (this is applicable exams that are not yet tagged as completed).</description>
        <label>Question_ID</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>Used to validate user exam session.</description>
        <label>Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Profile</label>
        <referenceTo>UserProfile__c</referenceTo>
        <relationshipLabel>User Examinations</relationshipLabel>
        <relationshipName>User_Examinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Examination</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Examination_ID__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Score__c</columns>
        <columns>Perfect_Score__c</columns>
        <columns>Status__c</columns>
        <columns>User_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UE-{00000}</displayFormat>
        <label>User_Examination_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Examinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>